Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-09-01 Takashi
 Japanese translation - update
  Src/Languages/Japanese: MergeJapanese.rc

2006-08-28 Kimmo
 PATCH: [ 1544777 ] Compare by size
  Forgot to commit Options-dialog changes last time so option for this wasn't visible
  Src: PropCompare.cpp
 BUG: [ 1547262 ] Suspicious bit shift warning
  Fix from Gal
  Src/Common: UniFile.cpp

2006-08-27 Kimmo
 PATCH: [ 1547190 ] Fix VS2005 compile
  Src: MergeArgs.cpp

2006-08-26 Gal
 BUG: [ 1546938 ] New toolbar icons only works for 'disabled' icons
  Src/Languages/*/Merge*.rc

2006-08-25 Kimmo
 Fix compiling WinMerge after moving folders around (Merge7z moved under ArchiveSupport)
  Src: 7zCommon.h

***** Switch to Subversion *****

2006-08-24 WinMerge experimental release 2.5.5.7 (cvs)

2006-08-24 Kimmo
 PATCH: [ 1545411 ] Add some missing options to configlog
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp
 PATCH: [ 1545165 ] WinMarge Bulgarian Translation
  Submitted by tigertron
  Src/Languages/Bulgarian: MergeBulgarian.rc
  Docs/Users/Languages: Readme-Bulgarian.txt
  Docs/Users/Contributors.txt
  InnoSetup: WinMerge.iss
  ShellExtension: ShellExtension.rc
  ShellExtension/Languages: ShellExtensionBulgarian.rc
 PATCH: [ 1545890 ] Swedish translation for update for WinMerge 2.5.5.7+
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc
 BUG: [ 1545082 ] Crash when comparing .rc files
  Fix submitted by Takashi
  Src/editlib: ccrystaltextview.cpp

2006-08-23 Kimmo
 PATCH: [ 1544905 ] Use stat() to check if file is read-only
  Src: files.cpp files.h
 PATCH: [ 1544777 ] Compare by size
  Src: DiffWrapper.h DirScan.cpp Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-08-22 Gal
 PATCH: [ 1541427 ] Using as an external diff tool (RFE 1454623)
  Src: MainFrm.cpp MainFrm.h MergeArgs.cpp MergeDoc.cpp

2006-08-22 Gal
 PATCH: [ 1544784 ] Use as ClearCase external merge tool