@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-09-04 Kimmo
+ BUG: [ 1550427 ] WinMerge 2.5.5.7 don't save "Include subfoders by default"
+  Src: PropRegistry.cpp
+
 2006-09-01 Takashi
  Japanese translation - update
   Src/Languages/Japanese: MergeJapanese.rc
